# jposits

./: README.md  build.gradle.kts
src/main/java/ru/alexander1248/jposit/: NativeLoader.java  PositsJNI.java
src/main/kotlin/ru/alexander1248/jposit/: HalfPosit.kt  Posit.kt
src/main/nativelib/: CMakeLists.txt  PositsJNI.cpp  ru_alexander1248_jposit_PositsJNI.h
src/main/nativelib/imports/softposits/source/: i64_to_p8.c  p16_to_i32.c  p16_to_pX1.c  p16_to_pX2.c  p16_to_ui32.c  p32_to_i32.c  p32_to_i64.c  p32_to_ui32.c  p32_to_ui64.c  p8_to_i32.c  pX1_to_i32.c  pX1_to_i64.c  pX1_to_pX2.c  pX1_to_ui32.c  pX1_to_ui64.c  ui64_to_pX1.c
src/test/java/ru/alexander1248/jposit/: JavaUsageTest.java
src/test/kotlin/ru/alexander1248/jposit/: HalfPositTest.kt  PositTest.kt
